# Cantor

./: .gitignore  AGENTS.md  App.tsx  README.md  THIRD_PARTY_NOTICES.md  app.json  implementation-notes.md  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-relay.yml  release.yml
android/app/: build.gradle
android/app/src/main/java/com/cantor/app/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
cantor/: AGENTS.md  App.tsx  babel.config.js  index.js  jest.config.js  package-lock.json  package.json
cantor-design-v1-backup/: App.tsx
cantor-design-v1-backup/src/: navigation.ts
cantor-design-v1-backup/src/components/: CantorSet.tsx  ui.tsx
cantor-design-v1-backup/src/identity/: words.ts
cantor-design-v1-backup/src/screens/: CreateScreen.tsx  GeneratingScreen.tsx  LibraryScreen.tsx  OnboardingScreen.tsx  SongScreen.tsx
cantor-design-v1-backup/src/state/: songs.tsx
cantor-design-v1-backup/src/theme/: tokens.ts
cantor/__tests__/: App.test.tsx
cantor/android/: gradle.properties  settings.gradle
cantor/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
cantor/android/app/src/main/res/drawable-night/: ic_launcher_foreground.xml
cantor/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
cantor/ios/Cantor/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
cantor/ios/Cantor.xcodeproj/: project.pbxproj
cantor/jest/: assetStub.js  asyncStorageMock.js  keychainMock.js  visionCameraMock.js
cantor/licenses/: OFL-1.1.txt
cantor/src/backends/: PairBackendModal.tsx  connection.ts  pairing.ts  storage.ts  types.ts
cantor/src/backends/__tests__/: connection.test.ts  pairing.test.ts
cantor/src/dev/: MotionLab.tsx
cantor/src/identity/: derive.ts  mnemonic.ts  secureIdentity.ts
cantor/src/identity/__tests__/: derive.test.ts  mnemonic.test.ts
cantor/src/motion/: AnimatedSymbol.tsx  CanonicalSymbol.tsx  MorphText.tsx  clock.ts  geometry.ts  index.ts  library.ts  shapes.ts  silhouette.ts
cantor/src/onboarding/: Onboarding.tsx
cantor/src/onboarding/panels/: BackendsPanel.tsx  BackupPanel.tsx  IdentityPanel.tsx  ThresholdPanel.tsx  types.ts
cantor/src/screens/: MainScreen.tsx
cantor/src/theme/: tokens.ts
icons/: gen_icons.py
ios/: Podfile
ios/Cantor.xcodeproj/xcshareddata/xcschemes/: Cantor.xcscheme
node/: Cargo.toml  README.md  install.sh
node/.cargo/: config.toml
node/crates/cantor-node/: Cargo.toml
node/crates/cantor-node/src/: accel.rs  backends.rs  catalog.rs  config.rs  control.rs  engine.rs  generate.rs  identity.rs  main.rs  pairing.rs  relay.rs  service.rs  session.rs  signing.rs  store.rs  update.rs
node/crates/cantor-proto/: Cargo.toml
node/crates/cantor-proto/src/: lib.rs
node/scripts/: protocol-client.mjs
protocol/: ClientMessage.ts  JobView.ts  NodeInfo.ts  NodeLimits.ts  NodeLoad.ts  NodeMessage.ts
relay/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
relay/public/: install.sh
relay/public/catalog/: v1.json
relay/scripts/: client.mjs  verify-assets.mjs
relay/src/: frames.ts  index.ts  room.ts
relay/test/: install.test.ts  room.test.ts  tsconfig.json
src/dev/: MotionLab.tsx
src/identity/: mnemonic.ts
src/identity/__tests__/: mnemonic.test.ts
src/motion/: CanonicalSymbol.tsx  MorphShape.tsx  MorphText.tsx  README.md  fonts.ts  geometry.ts  glyphs.ts  index.ts  library.ts  shapes.ts  silhouette.ts  symbolArtwork.ts  symbolLibrary.ts  text.ts  transition.ts
src/motion/__tests__/: engine.test.ts  text.test.ts
src/onboarding/: IntroPanel.tsx  MorphText.tsx  Onboarding.tsx  SigilMark.tsx  cantorBars.ts  morph.ts  sigils.ts  symbols.ts
src/onboarding/__tests__/: symbols.test.ts
src/onboarding/panels/: BackendsPanel.tsx  BackupPanel.tsx  IdentityPanel.tsx  ThresholdPanel.tsx  WhatPanel.tsx  kit.tsx  phrase.ts  types.ts
src/theme/: tokens.ts
