[workspace]
members = ["crates/cantor-node", "crates/cantor-proto"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.104"
base64 = "0.22.1"
bs58 = "0.5.1"
dirs = "6.0.0"
ed25519-dalek = "3.0.0"
futures-util = "0.3.33"
getrandom = "0.4.3"
hostname = "0.4.2"
qrcode = { version = "0.14.1", default-features = false }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots", "url"] }
toml = "1.1.3"
ts-rs = "12.0.1"
url = "2.5.8"
zeroize = "1.8.2"
