[workspace]
members = ["crates/cantor-node", "crates/cantor-proto"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.0.4"

[workspace.dependencies]
anyhow = "1.0.104"
base64 = "0.22.1"
bs58 = "0.5.1"
dirs = "6.0.0"
ed25519-dalek = "3.0.0"
futures-util = "0.3.33"
getrandom = "0.4.3"
hostname = "0.4.2"
libc = "0.2.180"
hmac = "0.12.1"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "rustls-tls-webpki-roots", "stream"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
tempfile = "3.27.0"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots", "url"] }
toml = "1.1.3"
ts-rs = "12.0.1"
url = "2.5.8"
zeroize = "1.8.2"
