[package]
name = "cantor-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bs58.workspace = true
cantor-proto = { path = "../cantor-proto" }
dirs.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hostname.workspace = true
hmac.workspace = true
qrcode.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
url.workspace = true
zeroize.workspace = true
